[gd_scene load_steps=7 format=2]

[ext_resource path="res://Scripts/Computadora.gd" type="Script" id=1]
[ext_resource path="res://GFX/PNG/Tiles/tile_537.png" type="Texture" id=2]
[ext_resource path="res://GFX/PNG/Tiles/tile_519.png" type="Texture" id=3]
[ext_resource path="res://Escenas/ComputadoraPopup.tscn" type="PackedScene" id=4]
[ext_resource path="res://Tema.tres" type="Theme" id=5]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 28.7676, 35 )

[node name="Computadora" type="Area2D"]
collision_layer = 2
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
rotation = 1.5708
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 20, -7.94465e-008 )
rotation = 1.5708
shape = SubResource( 1 )

[node name="Light2D" type="Light2D" parent="."]
position = Vector2( 35, 0 )
rotation = 1.5708
texture = ExtResource( 3 )
color = Color( 0.580392, 0.921569, 1, 1 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="ComputadoraPopup" parent="CanvasLayer" instance=ExtResource( 4 )]

[node name="Label" type="Label" parent="." groups=[
"Etiquetas",
]]
margin_left = -40.0
margin_top = -5.0
margin_bottom = 9.0
theme = ExtResource( 5 )
text = "TEST"
[connection signal="body_entered" from="." to="." method="_on_Computadora_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_Computadora_body_exited"]
